--- a/src/main/resources/assets/resurgancetweaks/lang/en_us.lang
+++ b/src/main/resources/assets/resurgancetweaks/lang/en_us.lang
@@ -1,3 +1,9 @@
+##############
+#  Commands  #
+##############
+resurgancetweaks.command.usage=/resurgance subcommand
+resurgancetweaks.command.mastercommand.usage=/resurgance AllYourBaseAreBelongToUs
+
 ###############
 #   Configs   #
 ###############
